# Ravencoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Makefile.am  PULL_REQUEST_TEMPLATE.md  README.md  about  autogen.sh  azure-pipelines.yml  background.tiff  confdefs.h  configure.ac  crash  libchickadeeconsensus.pc.in  libyottafluxconsensus.pc.in  release_checklist.md  run.sh  text.txt  yai_rename.sh
src/: LibBoolEE.cpp  LibBoolEE.h  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addressindex.h  addrman.cpp  addrman.h  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  chickadee-cli-res.rc  chickadee-cli.cpp  chickadee-tx-res.rc  chickadee-tx.cpp  chickadeed-res.rc  chickadeed.cpp  clientversion.cpp  clientversion.h  (+107 more)
src/algo/: extra.c  extra.h  fugue.c  gost_streebog.c  gost_streebog.h  hamsi_helper.c  hash_algos.h  lyra2.cpp  md_helper.c  sha2.c  sph_md_helper.c  sph_sha2.c  sph_sha2.h  sph_sha2big.c  sponge.cpp  tiger.cpp
src/assets/: assetdb.cpp  assetdb.h  assets.cpp  assets.h  assetsnapshotdb.cpp  assetsnapshotdb.h  assettypes.cpp  assettypes.h  messagedb.cpp  messagedb.h  messages.cpp  messages.h  myassetsdb.cpp  myassetsdb.h  payoutdb.cpp  payoutdb.h  restricteddb.cpp  restricteddb.h  rewardrequestdb.cpp  rewardrequestdb.h  rewards.cpp  rewards.h  rewardsdb.cpp  rewardsdb.h  snapshotrequestdb.cpp  snapshotrequestdb.h
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_chickadee.cpp  bench_raven.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/bench/data/: block566553.raw
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.cpp  consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h  sph_fugue.c  sph_hamsi_helper.c
src/crypto/ctaes/: README.md
src/crypto/ethash/: helpers.hpp  progpow_test_vectors.hpp
src/leveldb/port/: port_posix.cc
src/leveldb/util/: logging.cc
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  assetcontroldialog.cpp  assetcontroldialog.h  assetcontroltreewidget.cpp  assetcontroltreewidget.h  assetfilterproxy.cpp  assetfilterproxy.h  assetrecord.h  assetsdialog.cpp  assetsdialog.h  assettablemodel.cpp  assettablemodel.h  atomicswapsdialog.cpp  atomicswapsdialog.h  bantablemodel.cpp  bantablemodel.h  callback.h  chickadee-qt.files  chickadee.cpp  chickadee.qrc  chickadee_locale.qrc  chickadeeaddressvalidator.cpp  chickadeeaddressvalidator.h  chickadeeamountfield.cpp  chickadeeamountfield.h  chickadeegui.cpp  chickadeegui.h  chickadeestrings.cpp  chickadeeunits.cpp  chickadeeunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  (+129 more)
src/qt/darkstyle/: darkstyle.qss
src/qt/forms/: addressbookpage.ui  assetcontroldialog.ui  assetsdialog.ui  atomicswapsdialog.ui  coincontroldialog.ui  createassetdialog.ui  debugwindow.ui  helpmessagedialog.ui  mnemonicdialog.ui  mnemonicdialog1.ui  (+15 more)
src/rpc/: assets.cpp  blockchain.cpp  blockchain.h  client.cpp  client.h  messages.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  rewards.cpp  safemode.h  server.cpp  server.h  test.json
src/script/: chickadeeconsensus.cpp  chickadeeconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  ravenconsensus.cpp  ravenconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  yottafluxconsensus.cpp  yottafluxconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/snapshot/: snapshotdb.cpp  snapshotdb.h
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  kawpow_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  (+37 more)
src/wallet/: bip39.cpp  bip39.h  bip39_chinese_simplified.h  bip39_chinese_traditional.h  bip39_english.h  bip39_french.h  bip39_italian.h  bip39_japanese.h  bip39_korean.h  bip39_spanish.h  coincontrol.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+835 files in other folders)
